Send mail Contact Réussi

--- a/src/saar_website/templates/saar_website/about_grp.html
+++ b/src/saar_website/templates/saar_website/about_grp.html
@@ -7,11 +7,11 @@
       <!-- Header Start -->
       <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px;">
-            <h3 class="text-white display-3 mb-4">Le Groupe Saar</h1>
+            <h3 class="text-white display-3 mb-4">Le Groupe SAAR</h1>
             <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Notre Société</a></li>
                 {% comment %} <li class="breadcrumb-item"><a href="#">Pages</a></li> {% endcomment %}
-                <li class="breadcrumb-item active text-white">Le Groupe Saar</li>
+                <li class="breadcrumb-item active text-white">Le Groupe SAAR</li>
             </ol>    
         </div>
     </div>
@@ -37,24 +37,24 @@
                 </div>
                <div class="col-md-6 col-lg-6">
                     {% comment %} <h3 class="mb-2">Envoyer un message</h3> {% endcomment %}
-                    <p class="mb-4">La Société africaine d’assurances et de réassurances <strong>(SAAR)</strong> a été créée au Cameroun le 27 novembre 1990, avec un capital social de 400 000 000 FCFA.</p>
-                    <p class="mb-4">Entreprise dynamique et visionnaire, elle fait partie aujourd’hui des leaders dans la zone CIMA, grâce à un Réseau couvrant neuf pays du continent africain : <strong>CAMEROUN - COTE D’IVOIRE - GUINEE EQUATORIALE - LIBERIA - REPUBLIQUE DE GUINEE - SAO TOME ET PRINCIPE – SENEGAL - TCHAD.</strong> </p>
-                    <p class="mb-4">La SAAR offre des produits dans les secteurs de <strong>l’assurance vie, l’assurance non-vie et de l’immobilier</strong>.</p>
-                    <p class="mb-4">Dans la Branche non-vie, les garanties couvrent <strong>l’Automobile, la Santé, les Transports, la Responsabilité Civile, et les Risques Divers. Dans la Branche vie, nous proposons des produits en Epargne et en Prévoyance</strong>.</p>
-                    <p>La vision de l’entreprise,« World Class African Insurance », se résume en trois points : </p>
-                    <ol >
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">La Société africaine d’assurances et de réassurances <strong>(SAAR)</strong> a été créée au Cameroun le 27 novembre 1990, avec un capital social de 400 000 000 FCFA.</p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Entreprise dynamique et visionnaire, elle fait partie aujourd’hui des leaders dans la zone CIMA, grâce à un Réseau couvrant neuf pays du continent africain : <strong>CAMEROUN - COTE D’IVOIRE - GUINEE EQUATORIALE - LIBERIA - REPUBLIQUE DE GUINEE - SAO TOME ET PRINCIPE – SENEGAL - TCHAD.</strong> </p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">La SAAR offre des produits dans les secteurs de <strong>l’assurance vie, l’assurance non-vie et de l’immobilier</strong>.</p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Dans la Branche non-vie, les garanties couvrent <strong>l’Automobile, la Santé, les Transports, la Responsabilité Civile, et les Risques Divers. Dans la Branche vie, nous proposons des produits en Epargne et en Prévoyance</strong>.</p>
+                    <p style="text-align: justify;">La vision de l’entreprise,« World Class African Insurance », se résume en trois points : </p>
+                    <ol style="text-align: justify; font-size: 1.25em;">
                         <li><strong>Assurer un service aux standards internationaux de l’assurance ;</strong></li>
                         <li><strong>Fournir des solutions adaptées aux besoins de nos clients ;</strong></li>
                         <li><strong>Œuvrer efficacement au développement du continent africain.</strong></li>
                     </ol>
                     
-                    <p class="mb-4">Capital le plus précieux, les femmes et les hommes qui travaillent avec nous au quotidien sont au cœur de la protection des personnes et des biens.  </p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Capital le plus précieux, les femmes et les hommes qui travaillent avec nous au quotidien sont au cœur de la protection des personnes et des biens.  </p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>201-500 employés</p>
+                            <p class="mb-0" style="font-size: 1.25em;"><i class="fa fa-arrow-right text-primary me-2"></i>201-500 employés</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Siège social : Douala, Cameroun </p>
+                            <p class="mb-0" style="font-size: 1.25em;"><i class="fa fa-arrow-right text-primary me-2"></i>Siège social : Douala, Cameroun </p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Linkedin : <a class="btn-square btn btn-primary rounded-circle mx-1" target="_blank" href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/"><i class="fab fa-linkedin-in"></i></a>
