--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -72,7 +72,7 @@
                             </div>
                             <div class="blog-content border border-top-0 rounded-bottom p-4">
                                 <a href="{% url 'produit' numero=produit.pk %}" class="h4">{{produit.titre}}</a>
-                                <p class="my-3">{{ produit.contenu | truncatechars:200 }}</p>
+                                <p class="my-3" style="text-align: justify;">{{ produit.contenu | truncatechars:200 }}</p>
                                 <a href="{% url 'produit' numero=produit.pk %}" class="btn btn-primary rounded-pill py-2 px-4">Lire plus</a>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                                 <h5 class="mb-0">{{actualite.titre}}</h5>
                                 <small class="text-uppercase">Publié le {{actualite.date_publication|date:"d F Y"}}</small>
                                
-                                <p class="mb-4">{{actualite.contenu}}</p>
+                                <p class="mb-4" style="text-align: justify;">{{actualite.contenu}}</p>
                             </div>
                         
                         </div>
