--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -11,7 +11,7 @@
             <ol class="breadcrumb justify-content-center mb-0">
                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Notre Société</a></li>
                 {% comment %} <li class="breadcrumb-item"><a href="#">Pages</a></li> {% endcomment %}
-                <li class="breadcrumb-item active text-white">Saar Assurances Côte d'Ivoire</li>
+                <li class="breadcrumb-item active text-white">SAAR Assurances Côte d'Ivoire</li>
             </ol>    
         </div>
     </div>
@@ -33,20 +33,20 @@
                 {% comment %} <div class="col-lg-6" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/saar_img_1.png);"> {% endcomment %}
                 <div class="col-lg-6">
                     <h5 class="section-about-title pe-3">Qui somme nous ?</h5>
-                    <h1 class="mb-4">Bienvenue à <span class="text-primary">Saar Assurances</span></h1>
-                    <p class="mb-4">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
-                    <p class="mb-4">Le directeur général actuel est <strong>Monsieur KENGNE Wafo Loïc Armel</strong>, poste occupé depuis le 25 Novembre 2021.</p>
+                    <h1 class="mb-4">Bienvenue à <span class="text-primary">SAAR Assurances</span></h1>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/company/saar-assurances-c%C3%B4te-d-ivoire/mycompany/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE Wafo Loïc Armel</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
 
                     {% comment %} <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p> {% endcomment %}
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>50-100 employés</p>
+                            <p class="mb-0" style="font-size: 1.25em;"><i class="fa fa-arrow-right text-primary me-2"></i>50-100 employés</p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Fondée en 1990</p>
                         </div> {% endcomment %}
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Spécialisations : Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
+                            <p class="mb-0" style="font-size: 1.25em;"><i class="fa fa-arrow-right text-primary me-2"></i>Spécialisations : Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
@@ -66,7 +66,7 @@
     <!-- About End -->
 
     <!-- Travel Guide Start -->
-    <div class="container-fluid guide py-5">
+   <!-- <div class="container-fluid guide py-5">
         <div class="container py-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">DIRECTION GENERALE</h5>
@@ -160,7 +160,7 @@
                 </div> {% endcomment %}
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Travel Guide End -->
 
 
