--- a/src/saar_website/templates/saar_website/contact.html
+++ b/src/saar_website/templates/saar_website/contact.html
@@ -49,30 +49,44 @@
                 </div>
                 <div class="col-lg-8">
                     <h3 class="mb-2">Envoyer un message</h3>
+
+                    {% if messages %}
+                    {% for message in messages %}
+                    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %} alert-dismissible mt-3" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                        </button>  
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+
                     {% comment %} <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> {% endcomment %}
-                    <form>
+                    <form method="post" action="">
+
+                        {% csrf_token %}
+
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="name" placeholder="Your Name">
+                                    <input type="text" class="form-control border-0" id="name" name="name" placeholder="Your Name">
                                     <label for="name">Votre Nom</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control border-0" id="email" placeholder="Your Email">
+                                    <input type="email" class="form-control border-0" id="email" name="from_email" placeholder="Your Email">
                                     <label for="email">Votre Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="subject" placeholder="Subject">
+                                    <input type="text" class="form-control border-0" id="subject" name="subject" placeholder="Subject">
                                     <label for="subject">Sujet</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 160px"></textarea>
+                                    <textarea class="form-control border-0" placeholder="Leave a message here" id="message" name="message" style="height: 160px"></textarea>
                                     <label for="message">Message</label>
                                 </div>
                             </div>
