--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -23,13 +23,14 @@
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Nos produits</h4>
-                            <a href="{% url 'produit' numero=products_keys.0 %}"><i class="fas fa-angle-right me-2"></i> Automobile</a>
-                            <a href="{% url 'produit' numero=products_keys.1 %}"><i class="fas fa-angle-right me-2"></i> Santé </a>
+                            <a href="{% url 'produit' numero=products_keys.0 %}"><i class="fas fa-angle-right me-2"></i> Assurance Automobile</a>
+                            <a href="{% url 'produit' numero=products_keys.1 %}"><i class="fas fa-angle-right me-2"></i> Assurance Santé </a>
                             <a href="{% url 'produit' numero=products_keys.2 %}"><i class="fas fa-angle-right me-2"></i> Individuelle Accidents </a>
-                            <a href="{% url 'produit' numero=products_keys.3 %}"><i class="fas fa-angle-right me-2"></i> Voyage </a>
-                            <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Habitation</a>
-                            <a href="{% url 'produit' numero=products_keys.5 %}"><i class="fas fa-angle-right me-2"></i> Transport </a>
-                            <a href="{% url 'produit' numero=products_keys.6 %}"><i class="fas fa-angle-right me-2"></i> Caution </a>
+                            <a href="{% url 'produit' numero=products_keys.3 %}"><i class="fas fa-angle-right me-2"></i> Assurance Voyage </a>
+                            <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Assurance Habitation</a>
+                            <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Assurance Loyers Impayés</a>
+                            <a href="{% url 'produit' numero=products_keys.5 %}"><i class="fas fa-angle-right me-2"></i> Assurance Transport </a>
+                            <a href="{% url 'produit' numero=products_keys.6 %}"><i class="fas fa-angle-right me-2"></i> Assurance Caution </a>
                             <a href="{% url 'produit' numero=products_keys.7 %}"><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
                         </div>
                     </div>
@@ -37,8 +38,8 @@
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Notre société</h4>
-                            <a href="{% url 'about_grp' %}"><i class="fas fa-angle-right me-2"></i> Le Groupe Saar </a>
-                            <a href="{% url 'about' %}"><i class="fas fa-angle-right me-2"></i> Saar Assurances Côte d'Ivoire </a>
+                            <a href="{% url 'about_grp' %}"><i class="fas fa-angle-right me-2"></i> Le Groupe SAAR </a>
+                            <a href="{% url 'about' %}"><i class="fas fa-angle-right me-2"></i> SAAR Assurances Côte d'Ivoire </a>
                             {% comment %} <a href="#"><i class="fas fa-angle-right me-2"></i> Direction Générale</a> {% endcomment %}
                             <a href="{% url 'agences' %}"><i class="fas fa-angle-right me-2"></i> Nos Agences</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
