Ajout Valeurs + Déclaration sinistre

--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -42,7 +42,7 @@
                             <a href="{% url 'about' %}"><i class="fas fa-angle-right me-2"></i> SAAR Assurances Côte d'Ivoire </a>
                             {% comment %} <a href="#"><i class="fas fa-angle-right me-2"></i> Direction Générale</a> {% endcomment %}
                             <a href="{% url 'agences' %}"><i class="fas fa-angle-right me-2"></i> Nos Agences</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
+                            <a href="{% url 'valeurs' %}"><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Carrières</a>
                             {% comment %} <a href=""><i class="fas fa-angle-right me-2"></i> Magazine</a> {% endcomment %}
                         </div>
