--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -501,6 +501,73 @@
     </div>
     <!-- Testimonial End -->
 
+
+  <!-- Tour Booking Start -->
+  <div class="container-fluid booking py-5">
+
+    
+    <div class="container py-5">
+
+        <h1 class="text-white text-center mb-4">Déclarer votre sinistre</h1>
+
+
+
+        <div class="row g-5 align-items-center">
+            <div class="col-lg-6">
+
+                <h2 class="mb-4 text-white text-center">Par téléphone</h2>
+
+                <h5 class="mb-4 text-white text-center">Nous sommes là pour vous aider ! En cas d'incident, contactez notre équipe dédiée au :  </h5>
+
+                <div class="rounded p-4">
+                    <div class="text-center mb-4">
+                        <i class="fa fa-phone-alt fa-3x text-primary mb-3"></i>
+                        <h4 class="text-white">Mobile</h4>
+                        <p class="mb-0 text-white">+225 07 11 25 28 61</p>
+                        <p class="mb-0 text-white">+225 07 47 84 08 97</p>
+                        <p class="mb-0 text-white">+225 27 22 50 81 50</p>
+                    </div>
+                </div>
+
+                <p class="mb-4 text-white text-center">*Du lundi au vendredi de 8h30 à 17h30 et le samedi de 9h à 12h30</p>
+                <p class="mb-4 text-white text-center">Nous vous assisterons rapidement et professionnellement tout au long du processus. </p>
+            </div>
+
+            <div class="col-lg-6">
+                <h2 class="text-white mb-3 text-center">En ligne</h2>
+                <div class="mx-auto text-center" style="max-width: 900px;">
+                    <p class="text-white mb-5">Déclarez votre sinistre en ligne de manière efficace et rapide avec la possibilité de vous faire contacter par un gestionnaire sinistre en vue du traitement de votre réclammation.
+                    </p>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="{% url 'reclamation' %}">Déclarer votre sinistre</a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</div> 
+<!-- Tour Booking End -->
+
+
+
+
+     <!-- Subscribe Start -->
+      {% comment %} <div class="container-fluid subscribe py-5">
+        <div class="container text-center py-5">
+            <div class="mx-auto text-center" style="max-width: 900px;">
+                <h1 class="text-white mb-4">Déclarer votre sinistre</h1>
+                <p class="text-white mb-5">Déclarez votre sinistre de manière efficace et rapide avec la possibilité de vous faire contacter par un gestionnaire sinistre en vue du traitement de votre réclammation.
+                </p>
+              
+                <div class="d-flex align-items-center justify-content-center">
+                    <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="{% url 'reclamation' %}">Déclarer votre sinistre</a>
+                </div>
+            </div>
+        </div>
+    </div> {% endcomment %}
+    <!-- Subscribe End -->
+
 {% endblock content %}
     
 
