--- a/src/saar_website/templates/saar_website/about_grp.html
+++ b/src/saar_website/templates/saar_website/about_grp.html
@@ -31,17 +31,18 @@
                 <div class="col-md-6 col-lg-6">
                     <div class="rounded">
                     
-                        <img src="{% static 'img/saar_assurances2.jpg' %}" class="img-fluid w-100 h-100" alt="">
+                        {% comment %} <img src="{% static 'img/saar_assurances2.jpg' %}" class="img-fluid w-100 h-100" alt=""> {% endcomment %}
+                        <img src="{% static 'img/saar-groupe.jpeg' %}" class="img-fluid w-100 h-100" alt="">
 
                     </div>
                 </div>
                <div class="col-md-6 col-lg-6">
                     {% comment %} <h3 class="mb-2">Envoyer un message</h3> {% endcomment %}
                     <p class="mb-4" style="text-align: justify; font-size: 1.25em;">La Société africaine d’assurances et de réassurances <strong>(SAAR)</strong> a été créée au Cameroun le 27 novembre 1990, avec un capital social de 400 000 000 FCFA.</p>
-                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Entreprise dynamique et visionnaire, elle fait partie aujourd’hui des leaders dans la zone CIMA, grâce à un Réseau couvrant neuf pays du continent africain : <strong>CAMEROUN - COTE D’IVOIRE - GUINEE EQUATORIALE - LIBERIA - REPUBLIQUE DE GUINEE - SAO TOME ET PRINCIPE – SENEGAL - TCHAD.</strong> </p>
+                    <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Entreprise dynamique et visionnaire, elle fait partie aujourd’hui des leaders dans la zone CIMA, grâce à un Réseau couvrant sept pays du continent africain : <strong>CAMEROUN - COTE D’IVOIRE - LIBERIA - REPUBLIQUE DE GUINEE - SAO TOME ET PRINCIPE – SENEGAL - TCHAD.</strong> </p>
                     <p class="mb-4" style="text-align: justify; font-size: 1.25em;">La SAAR offre des produits dans les secteurs de <strong>l’assurance vie, l’assurance non-vie et de l’immobilier</strong>.</p>
                     <p class="mb-4" style="text-align: justify; font-size: 1.25em;">Dans la Branche non-vie, les garanties couvrent <strong>l’Automobile, la Santé, les Transports, la Responsabilité Civile, et les Risques Divers. Dans la Branche vie, nous proposons des produits en Epargne et en Prévoyance</strong>.</p>
-                    <p style="text-align: justify;">La vision de l’entreprise,« World Class African Insurance », se résume en trois points : </p>
+                    <p style="text-align: justify;">La vision de l’entreprise, « World Class African Insurance », se résume en trois points : </p>
                     <ol style="text-align: justify; font-size: 1.25em;">
                         <li><strong>Assurer un service aux standards internationaux de l’assurance ;</strong></li>
                         <li><strong>Fournir des solutions adaptées aux besoins de nos clients ;</strong></li>
