--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -28,9 +28,10 @@
                             <a href="{% url 'produit' numero=products_keys.2 %}"><i class="fas fa-angle-right me-2"></i> Individuelle Accidents </a>
                             <a href="{% url 'produit' numero=products_keys.3 %}"><i class="fas fa-angle-right me-2"></i> Assurance Voyage </a>
                             <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Assurance Habitation</a>
-                            <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Assurance Loyers Impayés</a>
+                            <a href="{% url 'produit' numero=products_keys.9 %}"><i class="fas fa-angle-right me-2"></i> Assurance Loyers Impayés</a>
                             <a href="{% url 'produit' numero=products_keys.5 %}"><i class="fas fa-angle-right me-2"></i> Assurance Transport </a>
                             <a href="{% url 'produit' numero=products_keys.6 %}"><i class="fas fa-angle-right me-2"></i> Assurance Caution </a>
+                            <a href="{% url 'produit' numero=products_keys.8 %}"><i class="fas fa-angle-right me-2"></i> Assurance Takaful </a>
                             <a href="{% url 'produit' numero=products_keys.7 %}"><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
                         </div>
                     </div>
