--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -55,7 +55,8 @@
                     {% comment %} <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti deserunt tenetur sapiente atque. Magni non explicabo beatae sit, vel reiciendis consectetur numquam id similique sunt error obcaecati ducimus officia maiores.
                     </p> {% endcomment %}
                 </div>
-                <div class="row g-4 mb-3 justify-content-center">
+                {% comment %} <div class="row g-4 mb-3 justify-content-center"> {% endcomment %}
+                <div class="row g-4 mb-3">
                     
                     {% for produit in produits %}
 
@@ -508,19 +509,20 @@
     
     <div class="container py-5">
 
-        <h1 class="text-white text-center mb-4">Déclarer votre sinistre</h1>
+        <h1 class="text-white text-center mb-5">Déclarez votre sinistre</h1>
+        {% comment %} <br> {% endcomment %}
 
 
 
-        <div class="row g-5 align-items-center">
+        <div class="row g-5">
             <div class="col-lg-6">
 
                 <h2 class="mb-4 text-white text-center">Par téléphone</h2>
 
-                <h5 class="mb-4 text-white text-center">Nous sommes là pour vous aider ! En cas d'incident, contactez notre équipe dédiée au :  </h5>
+                <h5 class="mb-2 text-white text-center">Nous sommes là pour vous aider ! En cas d'incident, contactez notre équipe dédiée au :  </h5>
 
                 <div class="rounded p-4">
-                    <div class="text-center mb-4">
+                    <div class="text-center mb-2">
                         <i class="fa fa-phone-alt fa-3x text-primary mb-3"></i>
                         <h4 class="text-white">Mobile</h4>
                         <p class="mb-0 text-white">+225 07 11 25 28 61</p>
@@ -534,7 +536,7 @@
             </div>
 
             <div class="col-lg-6">
-                <h2 class="text-white mb-3 text-center">En ligne</h2>
+                <h2 class="text-white mb-4 text-center">En ligne</h2>
                 <div class="mx-auto text-center" style="max-width: 900px;">
                     <p class="text-white mb-5">Déclarez votre sinistre en ligne de manière efficace et rapide avec la possibilité de vous faire contacter par un gestionnaire sinistre en vue du traitement de votre réclammation.
                     </p>
